<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mighty Home Services</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_font1">fonts/GOTHICB.TTF</string>

    <!-- Signin -->

    <string name="hint_username">USERNAME</string>
    <string name="hint_password">PASSWORD</string>
    <string name="create_account">create account</string>
    <string name="forgot_password">forgot password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="facebook">FACEBOOK</string>

    <!-- Signup -->
    <string name="register">REGISTER</string>
    <string name="hint_confirm_password">CONFIRM PASSWORD</string>
    <string name="hint_firstname">FIRST NAME</string>
    <string name="hint_lastname">LAST NAME</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_streetname">STREET NAME</string>
    <string name="hint_city">CITY</string>
    <string name="hint_state">STATE</string>
    <string name="hint_zip_code">ZIP CODE</string>
    <string name="hint_contact">CONTACT</string>
    <string name="hint_communication_preference">COMMUNICATION PREFERENCE</string>

    <!-- Forgot Password -->
    <string name="send">Send</string>

    <!-- Edit Profile -->
    <string name="update_profile">Update Profile</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Home -->
    <string name="alerts">Alerts</string>
    <string name="back_message_home">Press again to close the application</string>

    <string-array name="menus">
        <item>Profile</item>
        <item>Alerts</item>
        <item>Projects</item>
        <item>Past Payments</item>
        <item>Sign Out</item>
    </string-array>

    <!-- Add New Project -->
    <string name="add_new_project">Add New Project</string>
    <string name="project_name">Project Name</string>
    <string name="project_desc">Project Description</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="save_address">Save Address</string>
    <string name="urgency_of_request">Urgency of request</string>
    <string name="submit">Submit</string>

    <string-array name="arr_urgency_of_request">
        <item>Immediate Need</item>
        <item>Within a week</item>
        <item>No Urgency</item>
    </string-array>

    <!-- Project Detail -->
    <string name="hint_enter_text">Enter Text</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua.
    </string>
    <string name="project_decription">Project Description :</string>
    <string name="edit">Edit</string>
    <string name="milestone">Milestone</string>
    <string name="add">Add</string>
    <string name="make_payment">Make Payment</string>
    <string name="review">Review</string>
    <string name="change_status">Change Status</string>
    <string name="add_document">Add Document</string>
    <string name="title">Title</string>
    <string name="browse">Browse</string>
    <string name="select_file">Select file</string>
    <string name="clear">Clear</string>

    <string-array name="arr_status">
        <item>Select status</item>
        <item>New</item>
        <item>Assigned</item>
        <item>Under Estimation</item>
        <item>Owner Review</item>
        <item>Down Payment</item>
        <item>Active</item>
        <item>Inprogress</item>
    </string-array>

    <!-- Review -->
    <string name="comment_here">Comment here</string>

    <!-- Add Milestone -->
    <string name="add_milestone">Add Milestone</string>
    <string name="milestone_title">Milestone Title</string>
    <string name="milestone_description">Milestone Description</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>

    <string-array name="arr_status_milestone">
        <item>Unpaid</item>
        <item>Paid</item>
    </string-array>

</resources>