<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res/com.acrobat.mightyhomeplanz"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/bg_color_all" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingLeft="10dp" android:paddingRight="10dp"
    android:paddingTop="10dp">

    <ImageButton android:id="@+id/btnClose_AddMilestone" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="left"
        android:background="@null" android:src="@drawable/close_btn" />

    <com.acrobat.widgets.CustomTextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/add_milestone"
        android:textColor="@color/red" android:textSize="20sp" />

    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:overScrollMode="never" android:scrollbars="none">

        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
            android:orientation="vertical" android:paddingBottom="10dp" android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <com.acrobat.widgets.CustomTextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="20dp"
                android:text="@string/milestone_title" android:textColor="@color/black_font" />

            <com.acrobat.widgets.CustomEditText android:id="@+id/etMilestoneTitle_AddMilestone"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/view_round_corner_black" android:padding="7dp"
                android:singleLine="true" />

            <com.acrobat.widgets.CustomTextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="10dp"
                android:singleLine="true" android:text="@string/milestone_description"
                android:textColor="@color/black_font" />

            <com.acrobat.widgets.CustomEditText android:id="@+id/etMilestoneDesc_AddMilestone"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/view_round_corner_black" android:gravity="top"
                android:inputType="textMultiLine" android:lines="4" android:maxLines="4"
                android:padding="7dp" />

            <com.acrobat.widgets.CustomTextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="10dp"
                android:singleLine="true" android:text="@string/amount"
                android:textColor="@color/black_font" />

            <com.acrobat.widgets.CustomEditText android:id="@+id/etAmount_AddMilestone"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/view_round_corner_black" android:gravity="top"
                android:inputType="numberDecimal" android:padding="7dp" android:singleLine="true" />

            <com.acrobat.widgets.CustomTextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="10dp"
                android:singleLine="true" android:text="@string/status"
                android:textColor="@color/black_font" />

            <Spinner android:id="@+id/spStatus_AddMilestone" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="5dp"
                android:background="@drawable/view_round_corner_black"
                android:entries="@array/arr_status_milestone" android:padding="5dp" />

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" android:layout_marginTop="20dp"
                android:gravity="center">

                <com.acrobat.widgets.CustomTextView android:id="@+id/tvSubmit_AddMilestone"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:background="@color/blue" android:paddingBottom="10dp"
                    android:paddingLeft="20dp" android:paddingRight="20dp" android:paddingTop="10dp"
                    android:text="@string/submit" android:textColor="@color/white" />

                <com.acrobat.widgets.CustomTextView android:id="@+id/tvClear_AddMilestone"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp" android:background="@color/yellow"
                    android:paddingBottom="10dp" android:paddingLeft="20dp"
                    android:paddingRight="20dp" android:paddingTop="10dp"
                    android:text="@string/clear" android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>