<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/bg_color_all"
    android:gravity="center_horizontal" android:orientation="vertical">

    <ScrollView android:id="@+id/scrollView1" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
            android:gravity="center" android:orientation="vertical" android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ac_height"
                android:src="@drawable/review_and_rating_text" />

            <RatingBar android:id="@+id/ratingBar_Review" style="@style/myRatingBar"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="30dp" />

            <com.acrobat.widgets.CustomCardView android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" android:layout_marginTop="20dp"
                card_view:cardBackgroundColor="@color/white" card_view:cardCornerRadius="0dp"
                card_view:cardElevation="1dp" card_view:cardUseCompatPadding="true">

                <com.acrobat.widgets.CustomEditText android:id="@+id/etComment_Review"
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:background="@null" android:drawablePadding="17dp" android:gravity="top"
                    android:hint="@string/comment_here" android:inputType="textMultiLine"
                    android:maxLines="4" android:minLines="4" android:padding="7dp"
                    android:textColor="@color/black" android:textSize="14sp"
                    android:textStyle="bold" />
            </com.acrobat.widgets.CustomCardView>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.acrobat.widgets.CustomTextView android:id="@+id/tvSave_Review"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:background="@drawable/btn_green_small" android:gravity="center"
                    android:text="@string/save" android:textColor="@color/white" />

                <com.acrobat.widgets.CustomTextView android:id="@+id/tvCancel_Review"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:background="@drawable/btn_yellow_small" android:gravity="center"
                    android:text="@string/cancel" android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>